[package]
name = "wuma-tracker"
version = "0.1.1"
description = "명조 맵스 트래커"
authors = ["wumadevs"]
edition = "2021"
license = "GPL-3.0-only"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wuma_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winapi = { version = "0.3.9", features = ["handleapi", "memoryapi", "minwindef", "ntdef", "processthreadsapi", "psapi", "securitybaseapi", "shellapi", "tlhelp32", "winnt"] }
tokio = "1.41.0"
axum = { version = "0.7.7", features = ["ws"] }
tracing = "0.1.40"
futures = "0.3.31"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
log = "0.4.22"
tauri-plugin-dialog = "2"
anyhow = "1.0.96"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

