[package]
name = "wuma-tracker"
version = "1.5.1"
description = "명조 맵스 트래커"
authors = ["wumadevs"]
edition = "2024"
license = "GPL-3.0-only"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wuma_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winapi = { version = "0.3.9", features = ["handleapi", "memoryapi", "minwindef", "ntdef", "processthreadsapi", "psapi", "securitybaseapi", "shellapi", "tlhelp32", "winnt", "minwinbase", "winuser"] }
tokio = "1.45.1"
axum = { version = "0.8.3", features = ["ws"] }
tracing = "0.1.40"
futures = "0.3.31"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
log = "0.4.22"
tauri-plugin-dialog = "2.2.2"
anyhow = "1.0.96"
webrtc = "0.13.0"
thiserror = "1"
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
uuid = { version = "1.17.0", features = ["v4"] }
tower-http = { version = "0.6.6", features = ["cors"] }
rand = "0.8"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "blocking", "native-tls"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.2.4"
tauri-plugin-updater = "2.8.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Services_Store",
    "Foundation",
    "Win32_Storage_Packaging_Appx",
] }

[features]
store = [] # MS Store용 플래그

[package.metadata.tauri-winres]
FileDescription = "명조 맵스 트래커"
ProductName = "WumaTracker"
CompanyName = "WumaDevs"
OriginalFilename = "WumaTracker.exe"
